force-app/main/default/objects/Employee_Salary__c/Employee_Salary__c.object-meta.xml
<CustomObject>
    <label>Employee Salary</label>
    <nameField>
        <displayFormat>SALARY-{0000}</displayFormat>
        <label>Salary Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Salary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>