force-app/main/default/objects/Employee_Salary__c/fields/Basic__c.field-meta.xml
<CustomField>
    <fullName>Basic__c</fullName>
    <label>Basic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>