force-app/main/default/objects/Employee_Salary__c/fields/Days_Worked__c.field-meta.xml
<CustomField>
    <fullName>Days_Worked__c</fullName>
    <label>Days Worked</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>