force-app/main/default/objects/Employee_Salary__c/fields/Employee_EPF__c.field-meta.xml
<CustomField>
    <fullName>Employee_EPF__c</fullName>
    <label>Employee EPF</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>