force-app/main/default/objects/Employee_Salary__c/fields/Employer_EPF__c.field-meta.xml
<CustomField>
    <fullName>Employer_EPF__c</fullName>
    <label>Employer EPF</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>