force-app/main/default/objects/Employee_Salary__c/fields/ESIC__c.field-meta.xml
<CustomField>
    <fullName>ESIC__c</fullName>
    <label>ESIC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>