force-app/main/default/objects/Employee_Salary__c/fields/Gross_Earning__c.field-meta.xml
<CustomField>
    <fullName>Gross_Earning__c</fullName>
    <formula>Basic__c +  House_Rent_Allowance__c + Special_Allowance__c +  Statutory_Bonus__c + LTA_Allowance__c +
Other_Earning_1__c +  Other_Earning_2__c + Other_Earning_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Earning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>