force-app/main/default/objects/Employee_Salary__c/fields/Gross_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Gross_Earnings__c</fullName>
    <label>Gross Earnings</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>