force-app/main/default/objects/Employee_Salary__c/fields/House_Rent_Allowance__c.field-meta.xml
<CustomField>
    <fullName>House_Rent_Allowance__c</fullName>
    <label>House Rent Allowance</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>