force-app/main/default/objects/Employee_Salary__c/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <label>HRA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>