force-app/main/default/objects/Employee_Salary__c/fields/Income_Tax__c.field-meta.xml
<CustomField>
    <fullName>Income_Tax__c</fullName>
    <label>Income Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>