force-app/main/default/objects/Employee_Salary__c/fields/Income_Tax_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Income_Tax_Deduction__c</fullName>
    <label>Income Tax Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>