force-app/main/default/objects/Employee_Salary__c/fields/Internet_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Internet_Allowance__c</fullName>
    <label>Internet Allowance</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>