force-app/main/default/objects/Employee_Salary__c/fields/LOP_Days__c.field-meta.xml
<CustomField>
    <fullName>LOP_Days__c</fullName>
    <label>LOP Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>