force-app/main/default/objects/Employee_Salary__c/fields/LTA_Allowance__c.field-meta.xml
<CustomField>
    <fullName>LTA_Allowance__c</fullName>
    <label>LTA Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>