force-app/main/default/objects/Employee_Salary__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Month</label>
    <referenceTo>Monthly_Salary__c</referenceTo>
    <relationshipLabel>Employee Salaries</relationshipLabel>
    <relationshipName>Employee_Salaries</relationshipName>
    <type>Lookup</type>
</CustomField>