force-app/main/default/objects/Employee_Salary__c/fields/Other_Deduction_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Deduction_2__c</fullName>
    <label>Other Deduction 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>