force-app/main/default/objects/Employee_Salary__c/fields/Other_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Other_Deduction__c</fullName>
    <label>Other Deduction 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>