force-app/main/default/objects/Employee_Salary__c/fields/Other_Earning_3__c.field-meta.xml
<CustomField>
    <fullName>Other_Earning_3__c</fullName>
    <label>Other Earning 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>