force-app/main/default/objects/Employee_Salary__c/fields/P_F__c.field-meta.xml
<CustomField>
    <fullName>P_F__c</fullName>
    <label>P.F.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>