force-app/main/default/objects/Employee_Salary__c/fields/Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Date__c</fullName>
    <label>Pay Date</label>
    <type>Date</type>
</CustomField>