force-app/main/default/objects/Employee_Salary__c/fields/Profession_Tax__c.field-meta.xml
<CustomField>
    <fullName>Profession_Tax__c</fullName>
    <label>Profession Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>