force-app/main/default/objects/Employee_Salary__c/fields/Professional_Tax__c.field-meta.xml
<CustomField>
    <fullName>Professional_Tax__c</fullName>
    <label>Professional Tax</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>