force-app/main/default/objects/Employee_Salary__c/fields/Special_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Special_Allowance__c</fullName>
    <label>Special Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>