force-app/main/default/objects/Employee_Salary__c/fields/Statutory_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Statutory_Bonus__c</fullName>
    <label>Statutory Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>