force-app/main/default/objects/Employee_Salary__c/fields/Total_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Total_Deduction__c</fullName>
    <formula>Income_Tax__c +  Profession_Tax__c + P_F__c + Other_Deduction__c + Other_Deduction_2__c + Other_Deduction_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>