force-app/main/default/objects/Employee_Salary__c/fields/Total_Net_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Payable__c</fullName>
    <label>Total Net Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>