force-app/main/default/objects/Employee_Salary__c/fields/Total_Net_Payablee__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Payablee__c</fullName>
    <formula>Gross_Earning__c + Total_Reimbursements__c - Total_Deduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>