force-app/main/default/objects/Employee_Salary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>