force-app/main/default/objects/Employee_Salary__c/listViews/This_Month_s_Salary_Slip.listView-meta.xml
<ListView>
    <fullName>This_Month_s_Salary_Slip</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Month__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month&apos;s Salary Slip</label>
</ListView>